Next step will delete Hello_world file,and we test how torch work.

--- a/DeepLearning_Project/test1.ipynb
+++ b/DeepLearning_Project/test1.ipynb
@@ -3,19 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3840c6cb",
+   "id": "c9a1fd65",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Hello world!\")"
+    "# 导入PyTorch,注意，实际上库的名字是torch而非PyTorch\n",
+    "import torch"
    ]
   }
  ],
