begin to study Arithmetic Operators

--- a/DeepLearning_Project/Data_processing.ipynb
+++ b/DeepLearning_Project/Data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "c9a1fd65",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "bc8ffaef",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        " tensor([ 1.,  4., 16., 64.]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,6 +254,28 @@
     "x = torch.tensor([1.0, 2, 4, 8])\n",
     "y = torch.tensor([2, 2, 2, 2])\n",
     "x + y, x - y, x * y, x / y, x ** y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c67d9aea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([2.7183e+00, 7.3891e+00, 5.4598e+01, 2.9810e+03])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 对输入的张量（Tensor）进行逐元素的指数运算。这里的指数运算指的是计算自然对数底数e的x次幂，即e^x\n",
+    "torch.exp(x)"
    ]
   }
  ],
