--- a/DeepLearning_Project/Data_processing.ipynb
+++ b/DeepLearning_Project/Data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c9a1fd65",
    "metadata": {},
    "outputs": [],
@@ -276,6 +276,311 @@
    "source": [
     "# 对输入的张量（Tensor）进行逐元素的指数运算。这里的指数运算指的是计算自然对数底数e的x次幂，即e^x\n",
     "torch.exp(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6558bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 通过逻辑运算符构建二元张量\n",
+    "x==y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d78ef720",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 对张量中的所有元素进行求和，会产生一个单元素张量\n",
+    "x.sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fb5edd6",
+   "metadata": {},
+   "source": [
+    "## 广播机制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9059fba3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 在某些情况下，即使形状不同，可通过广播机制来执行按元素操作\n",
+    "# 机制如下：\n",
+    "# 1、通过适当复制元素来扩展一个或两个数组，以便在转换之后，两个张量具有相同的形状\n",
+    "# 2、对生成的数组执行按元素操作\n",
+    "\n",
+    "# 在大多数情况下，将沿着数组中长度为1的轴进行广播\n",
+    "a = torch.arange(3).reshape((3, 1))\n",
+    "b = torch.arange(2).reshape((1, 2))\n",
+    "a,b,a+b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff9be26f",
+   "metadata": {},
+   "source": [
+    "## 索引和切片"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f0effbc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 同numpy的操作，略"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d978aade",
+   "metadata": {},
+   "source": [
+    "## 节省内存"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8e26b33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python的id() 函数提供了内存中引用对象的确切地址\n",
+    "before = id(y)\n",
+    "y = y + x\n",
+    "id(y)==before"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47c64ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 所以，尽可能原地操作\n",
+    "# 使用切片表示法将操作的结果分配给先前分配的数组\n",
+    "z = torch.zeros_like(y)\n",
+    "print(\"id(z):\",id(z))\n",
+    "z[:] = x + y\n",
+    "print(\"id(z):\",id(z))\n",
+    "# 后续计算中没有重复使用X,也可以使用X[:] = X + Y或X += Y来减少操作的内存开销"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2ec5b0a",
+   "metadata": {},
+   "source": [
+    "## 转换为其他python对象"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a117ee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 深度学习定义的张量和numpy张量可相互转化，两者共享内存\n",
+    "X = torch.arange(12).reshape((3, -1))\n",
+    "A = X.numpy()\n",
+    "B = torch.tensor(A)\n",
+    "type(A),type(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afeafbfd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 要将大小为1的张量转换为Python标量，我们可以调用item函数或Python的内置函数\n",
+    "a = torch.tensor([3.5])\n",
+    "a, a.item(), float(a), int (a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "950367d0",
+   "metadata": {},
+   "source": [
+    "## 练习"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5559520c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0,  1,  2],\n",
+       "         [ 4,  5,  6]],\n",
+       "\n",
+       "        [[ 2,  3,  4],\n",
+       "         [ 6,  7,  8]],\n",
+       "\n",
+       "        [[ 4,  5,  6],\n",
+       "         [ 8,  9, 10]]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# p47.2\n",
+    "m = torch.arange(6).reshape((1,2,3))\n",
+    "n = torch.arange(6).reshape((3,2,1))\n",
+    "m + n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6560734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 广播机制遵循以下规则：\n",
+    "\n",
+    "# 从后向前比较形状：从张量的最后一个维度开始，向前逐个维度比较。\n",
+    "# 维度兼容：如果两个张量在某个维度上的大小相等，或者其中一个张量在该维度上的大小为1，则这两个张量在该维度上是兼容的。\n",
+    "# 扩展维度：如果两个张量在某个维度上不兼容，则PyTorch会自动将大小为1的维度扩展为与另一个张量相同的大小。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9812cf1a",
+   "metadata": {},
+   "source": [
+    "# 数据预处理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "121ff756",
+   "metadata": {},
+   "source": [
+    "## 读取数据集"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4ce491ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "os.makedirs(os.path.join('..','data'),exist_ok=True)\n",
+    "data_file = os.path.join('..', 'data', 'house_tiny.csv')\n",
+    "with open(data_file, 'w') as f:\n",
+    "    f.write('NumRooms,Alley,Price\\n')\n",
+    "    f.write('NA,Pave,127500\\n')\n",
+    "    f.write('2,NA,10600\\n')\n",
+    "    f.write('4,NA,178100\\n')\n",
+    "    f.write('NA,NA,140000\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6b7a2bcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   NumRooms Alley   Price\n",
+      "0       NaN  Pave  127500\n",
+      "1       2.0   NaN   10600\n",
+      "2       4.0   NaN  178100\n",
+      "3       NaN   NaN  140000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv(data_file)\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da0840cd",
+   "metadata": {},
+   "source": [
+    "## 处理缺失值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "621961c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   NumRooms Alley\n",
+      "0       3.0  Pave\n",
+      "1       2.0   NaN\n",
+      "2       4.0   NaN\n",
+      "3       3.0   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs, outputs = data.iloc[:,0:2], data.iloc[:,2]\n",
+    "inputs = inputs.fillna(inputs.mean(numeric_only=True))\n",
+    "print(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cacb0d8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   NumRooms  Alley_Pave  Alley_nan\n",
+      "0       3.0        True      False\n",
+      "1       2.0       False       True\n",
+      "2       4.0       False       True\n",
+      "3       3.0       False       True\n"
+     ]
+    }
+   ],
+   "source": [
+    "inputs = pd.get_dummies(inputs, dummy_na=True, dtype=int)\n",
+    "print(inputs)"
    ]
   }
  ],
